--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Sachi-Dro</title>
 </head>
-<body>
-<h4>hello!</h4>
+<body >
+<h4 style="color: red; font-size: 40px">hello!</h4>
 </body>
 </html>
